# Library-Management-System

./: CMakeLists.txt  README.md
include/core/: DataManager.h  LibraryController.h
include/models/: Book.h  Member.h  Transaction.h
include/ui/: LoginDialog.h  MainWindow.h
src/: main.cpp
src/core/: DataManager.cpp  LibraryController.cpp
src/models/: Book.cpp  Member.cpp  Transaction.cpp
src/ui/: LoginDialog.cpp  MainWindow.cpp
